debhelper (11.5.4) UNRELEASED; urgency=medium

  * Dh_Lib.pm: Reopen stdin to read from /dev/null in doit (and its sibling
    functions) to prevent issues when stdin is open in write-only mode
    (which is what nohup(1) does).  Thanks to Julian Gilbey for reporting
    the issue and providing a sample patch for it as well.
    (Closes: #913663)
  * fr.po: Add missing dash in "--parallel" in a translation.  Thanks to
    Christian Marillat for reporting the issue.  (Closes: #915255)

 -- Niels Thykier <niels@thykier.net>  Tue, 13 Nov 2018 20:30:49 +0000

debhelper (11.5.3) unstable; urgency=medium

  [ Helmut Grohne ]
  * cmake.pm: Pass the usual CMAKE_SYSTEM_PROCESSOR for ppc64el
    when cross compiling.   (Closes: #913425)

 -- Niels Thykier <niels@thykier.net>  Sat, 10 Nov 2018 21:42:12 +0000

debhelper (11.5.2) unstable; urgency=medium

  [ Luca Boccassi ]
  * makefile.pm: Pass V=0 or V=1 to the make file depending on
    whether "terse" is set in DEB_BUILD_OPTIONS.

  [ Niels Thykier ]
  * dh_gconf: Mark dh_gconf as deprecated (see #908845).
  * Dh_Lib.pm: Separate lowest non-deprecated compat level and
    the lowest compat level we generate "debhelper-compat (= X)"
    relations for.
  * Dh_Lib.pm: Open compat level 13 as an experimental compat
    level.
  * meson.pm: In compat 13, run tests with "meson test" rather
    than "ninja test".  Thanks to Simon McVittie for the
    suggestion.  (Closes: #912560)
  * dh: Correctly include dh_installsystemduser in the sequence
    in compat 12.  It was excluded due to an inverted boolean
    meaning it was added in compat up to (and incl.) compat 11.
    Thanks to Michael Biebl for reporting the issue.
    (Closes: #913329)
  * fr.po: Correct translations for dh_installman.1 which
    incorrectly implied that dh_installman was deprecated.
    Thanks to Laurent Bigonville for reporting the issue.
    (Closes: #912978)

  [ Helmut Grohne ]
  * cmake.pm: Pass QMAKE_EXECUTABLE when cross-building.